services/firewalls/gateway/config/iptables.rules
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# VPN
-A INPUT -p udp --dport 500 -j ACCEPT
-A INPUT -p udp --dport 4500 -j ACCEPT
-A INPUT -p esp -j ACCEPT
-A OUTPUT -p udp --dport 500 -j ACCEPT
-A OUTPUT -p udp --dport 4500 -j ACCEPT
-A OUTPUT -p esp -j ACCEPT

# Pingi do firewalla
-A INPUT -p icmp --icmp-type echo-request -j ACCEPT
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT

# Pingi między strefami
-A FORWARD -p icmp --icmp-type echo-request -j ACCEPT
-A FORWARD -p icmp --icmp-type echo-reply -j ACCEPT

# Internet -> DMZ (reguły z tabeli 2)
# HTTPS dla usług web
-A FORWARD -i eth0 -o eth1 -p tcp --dport 443 -j ACCEPT 
# IPsec VPN 
-A FORWARD -i eth0 -o eth1 -p udp -m multiport --dports 500,4500 -j ACCEPT  
# OpenVPN
-A FORWARD -i eth0 -o eth1 -p udp --dport 1194 -j ACCEPT  
# Domyślna polityka dla ruchu z internetu
-A FORWARD -i eth0 -j DROP  


# DMZ -> Internet
# Ruch wychodzący
-A FORWARD -i eth1 -o eth0 -j ACCEPT  

# Logowanie
-A FORWARD -j LOG --log-prefix "FIREWALL_DROP: "

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# NAT dla ruchu wychodzącego
-A POSTROUTING -o eth0 -j MASQUERADE

COMMIT
